# llm-insight

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  run_dashboard.sh  test_imports.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md
examples/: full_analysis_demo.py  monitoring_demo.py
notebooks/: quickstart.ipynb
scripts/: run_dashboard.py
src/: __init__.py  cli.py
src/api/: __init__.py  main.py  websocket.py
src/api/routes/: monitoring.py
src/core/: __init__.py  analyzer.py  anomaly_detection.py  attention.py  config.py  efficient_processing.py  failure_prediction.py  model_wrapper.py  sae.py
src/dashboard/: __init__.py  app.py
src/monitoring/: __init__.py  alerts.py  failure_patterns.py  monitor.py  storage.py
src/utils/: __init__.py  cache.py  logger.py
src/visualization/: __init__.py  attention_viz.py  feature_viz.py  interactive.py
tests/: __init__.py  test_analyzer.py  test_comprehensive.py  test_sae.py
